# exonum_test_task

./: README.md
backend/: Cargo.toml
backend/src/: lib.rs  main.rs  schema.rs  transactions.rs  wallet.rs
backend/src/proto/: cryptocurrency.proto  mod.rs
frontend/: package-lock.json
